--- a/html/bevasarlas_cikk.html
+++ b/html/bevasarlas_cikk.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="author" content="Fityó András és Körmöczi Róbert" />
+    <meta name="description" content="Ez az oldal egy bevásárló listát valósít meg." />
+    <title>Vásárlási szokások</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/bevasarlas_cikk.css" />
+    <link rel="icon" href="../img/favicon.ico" />
 </head>
 <body>
-
+<header>
+    <div class="header-container">
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="../img/shopping_bag.png" alt="Logo">
+            </a>
+        </div>
+        <nav>
+            <ul id="main-navigation">
+                <li class="nav-item">
+                    <a href="terkep.html">Szegedi áruházak</a>
+                </li>
+                <li class="nav-item">
+                    <a href="bevasarlo_lista.html">Bevásárló lista</a>
+                </li>
+                <li class="nav-item">
+                    <a href="uj_hozzaadasa.html">Új listaelem</a>
+                </li>
+                <li class="nav-item">
+                    <a href="bevasarlas_cikk.html" class="current-page">Bevásárlási szokások</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
