added table for groceries and updated article page

--- a/html/bevasarlo_lista.html
+++ b/html/bevasarlo_lista.html
@@ -35,5 +35,29 @@
         </nav>
     </div>
 </header>
+
+<table>
+    <tr>
+        <th>Termék</th>
+        <th>Mennyiség</th>
+    </tr>
+    <tr>
+        <td>Csirkemell</td>
+        <td class="amount">2 kg</td>
+    </tr>
+    <tr>
+        <td>Papírtörlő</td>
+        <td class="amount">1 db</td>
+    </tr>
+    <tr>
+        <td>Mosogatószer</td>
+        <td class="amount">1 db</td>
+    </tr>
+    <tr>
+        <td>Kézfertőtlenítő</td>
+        <td class="amount">2 db</td>
+    </tr>
+</table>
+
 </body>
 </html>
