added map picture, updated article

--- a/html/terkep.html
+++ b/html/terkep.html
@@ -34,6 +34,12 @@
             </ul>
         </nav>
     </div>
+    <div id="content">
+        <p class="maptext"> Néhány szegedi bevásárló hely:
+            <br />
+            <img src="../img/uzletek.png" alt="uzletek" class="picture">
+        </p>
+    </div>
 </header>
 </body>
 </html>
