--- a/html/uj_hozzaadasa.html
+++ b/html/uj_hozzaadasa.html
@@ -39,6 +39,7 @@
     <form action="uj_cikk_felvetele.php" method="post" enctype="multipart/form-data" autocomplete="off">
         <label>Árucikk: <input type="text" name="arunev" size="30px" /></label> <br />
         <label>Darabszám: <input type="number" name="darab" required /></label> <br />
+        <label>rejtett: <input type=hidden name="rejtett" /></label> <br />
 
         <fieldset>
             <legend>Mértékegység</legend>
