print stylesheet added

--- a/html/terkep.html
+++ b/html/terkep.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/terkep.css" />
     <link rel="icon" href="../img/favicon.ico" />
+    <link rel="stylesheet" media="print" href="../css/print.css" />
 </head>
 <body>
 <header>
