Map, fixed position

--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,15 @@
 </main>
 <footer>
     <div class="footer-container">
-
+        <div class="content-wrap">
+            <div class="footer-wrapper">
+                <p>
+                    Készítette:
+                    <span class="name-span" title="CC6A87">Fityó András</span> és
+                    <span class="name-span" title="WT8AYY">Körmöczi Róbert</span>
+                </p>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
