--- a/html/uj_hozzaadasa.html
+++ b/html/uj_hozzaadasa.html
@@ -38,7 +38,7 @@
 </header>
 
     <form action="uj_cikk_felvetele.php" method="post" enctype="multipart/form-data" autocomplete="off">
-        <label>Árucikk: <input type="text" name="arunev" size="30px" /></label> <br />
+        <label>Árucikk: <input type="text" name="arunev" size="30" /></label> <br />
         <label>Darabszám: <input type="number" name="darab" required /></label> <br />
         <label>rejtett: <input type=hidden name="rejtett" /></label> <br />
 
