--- a/html/bevasarlo_lista.html
+++ b/html/bevasarlo_lista.html
@@ -39,8 +39,8 @@
 
 <table>
     <tr>
-        <th>Termék</th>
-        <th>Mennyiség</th>
+        <th id="product"> Termék</th>
+        <th id="amount">Mennyiség</th>
     </tr>
     <tr>
         <td>Csirkemell</td>
