--- a/html/bevasarlas_cikk.html
+++ b/html/bevasarlas_cikk.html
@@ -42,6 +42,11 @@
 
     <h1>A megváltozott fogyasztói magatartás erősíti a digitalizáció, az egészségügy és a fenntarthatóság területén megfigyelhető trendeket</h1>
         <br />
+    
+    <aside>
+	A PwC új jelentése szerint a COVID-19 világjárvány kitörését megelőzően már formálódó fogyasztói trendek tovább erősödtek és afelé fogják mozdítani a kereskedő vállalatokat, hogy új alapokra helyezzék üzleti tevékenységüket.
+	</aside>
+		<br />    
 
     <p>A PwC 11. Global Consumer Insights Survey című kiadványában közzétett két felmérés a városi fogyasztók vásárlási szokásait és magatartását vizsgálja a COVID-19 világjárvány kitörése előtt és után, valamint azt, hogy a globálisan bekövetkező törés milyen módon idézte elő a digitális élet gyorsabb elterjedését.</p>
     <p>A felmérés eredményei azt mutatják, hogy a világjárvány, és az ebből fakadó társadalmi távolságtartás következtében alapvetően megváltoztak a fogyasztók munkavégzéssel, étkezéssel, kapcsolattartással és egészségvédelemmel kapcsolatos szokásai.</p>
