--- a/html/index.html
+++ b/html/index.html
@@ -71,6 +71,12 @@
             </article>
         </div>
     </section>
+    <section id="table-section">
+        <div class="content-wrap">
+            <h2>A bevásárlólista megjelenése:</h2>
+            <iframe src="bevasarlo_lista.html" frameborder="0" width="100%" height="500"></iframe>
+        </div>
+    </section>
 </main>
 <footer>
     <div class="footer-container">
