--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
     <section id="table-section">
         <div class="content-wrap">
             <h2>A bevásárlólista megjelenése:</h2>
-            <iframe src="bevasarlo_lista.html" frameborder="0" width="100%" height="500"></iframe>
+            <iframe src="bevasarlo_lista.html"></iframe>
         </div>
     </section>
 </main>
