--- a/html/uj_hozzaadasa.html
+++ b/html/uj_hozzaadasa.html
@@ -38,17 +38,19 @@
 </header>
 
     <form action="uj_cikk_felvetele.php" method="post" enctype="multipart/form-data" autocomplete="off">
-        <label>Árucikk: <input type="text" name="arunev" size="30" /></label> <br />
-        <label>Darabszám: <input type="number" name="darab" required /></label> <br />
-        <label>rejtett: <input type=hidden name="rejtett" /></label> <br />
-
+        <label for="arunev">Árucikk: <input type="text" name="arunev" id="arunev" size="30" /></label> <br />
+        <label for="darab">Darabszám: <input type="number" name="darab" id="darab" required /></label> <br />
+        <label for="rejtett">rejtett: <input type=hidden name="rejtett" id="rejtett" /></label> <br />
+        <label for="best-before">Lejárati dátum: <input type="date" id="best-before"></label> <br />
+        <label for="important">Nagyon fontos? <input type="checkbox" id="important"></label>
+        <label for="reset"><input type="reset" id="reset"></label>
         <fieldset>
             <legend>Mértékegység</legend>
 
             <label for="kg">kg</label>
-            <input type="checkbox" name="kg" id="kg">
+            <input type="radio" name="unit" id="kg">
             <label for="db">Darab</label>
-            <input type="checkbox" name="db" id="db">
+            <input type="radio" name="unit" id="db">
         </fieldset>
 
         <input type="submit" name="submit" value="Elküld">
