--- a/html/bevasarlas_cikk.html
+++ b/html/bevasarlas_cikk.html
@@ -49,7 +49,7 @@
 		<br />    
 
     <p>A PwC 11. Global Consumer Insights Survey című kiadványában közzétett két felmérés a városi fogyasztók vásárlási szokásait és magatartását vizsgálja a COVID-19 világjárvány kitörése előtt és után, valamint azt, hogy a globálisan bekövetkező törés milyen módon idézte elő a digitális élet gyorsabb elterjedését.</p>
-    <p>A felmérés eredményei azt mutatják, hogy a világjárvány, és az ebből fakadó társadalmi távolságtartás következtében alapvetően megváltoztak a fogyasztók munkavégzéssel, étkezéssel, kapcsolattartással és egészségvédelemmel kapcsolatos szokásai.</p>
+    <p>A felmérés eredményei azt mutatják, hogy a világjárvány, és az ebből fakadó társadalmi távolságtartás következtében <em>alapvetően megváltoztak a fogyasztók munkavégzéssel, étkezéssel, kapcsolattartással és egészségvédelemmel kapcsolatos szokásai.</em></p>
 
     <h3><strong>Módosult vásárlási szokások</strong></h3>
         <br />
@@ -62,7 +62,7 @@
 
     <h3><strong>Megnőtt a biztonság, védelem és az egészségügy fontossága</strong></h3>
         <br />
-    <p>Mindenki jobban vigyáz magára, és a városi fogyasztók 51%-a egyetért vagy teljes mértékben egyetért azzal az állítással, hogy a COVID-19 járvány miatt fokozottabban figyel mentális egészségére és jóllétére, testi egészségére és étkezésére.</p>
+    <p>Mindenki jobban vigyáz magára, és a városi fogyasztók 51%-a egyetért vagy teljes mértékben egyetért azzal az állítással, hogy a COVID-19 járvány miatt <em>fokozottabban figyel mentális egészségére és jóllétére, testi egészségére és étkezésére.</em></p>
     <p>A járvány kitörése előtt végzett kutatásunk során, amikor megkértük a városi lakosokat, hogy nevezzék meg a három legfontosabb okot, arra vonatkozóan, hogy miért laknak városban, az munkahelyi lehetőségeket (31%),
         a biztonság és védelemi szempontokat (27%) és az egészségügyet (19%) jelölték meg. A világjárvány kitörése után a megkérdezett városlakók 49%-a jelölte meg a biztonság és védelmet, 45%-a az egészségügyet és szintén 45%-a a munkahelyi lehetőségeket.
         Ez azt mutatja, hogy az életminőség szempontjából ez a két tényező az munkához való jutási lehetőségekkel szinte azonos fontosságúvá vált számukra a pandémiás helyzet hatására.</p>
