--- a/html/bevasarlo_lista.html
+++ b/html/bevasarlo_lista.html
@@ -43,20 +43,20 @@
         <th id="amount">Mennyiség</th>
     </tr>
     <tr>
-        <td>Csirkemell</td>
-        <td class="amount">2 kg</td>
+        <td headers="product">Csirkemell</td>
+        <td headers="amount" class="amount">2 kg</td>
     </tr>
     <tr>
-        <td>Papírtörlő</td>
-        <td class="amount">1 db</td>
+        <td headers="product">Papírtörlő</td>
+        <td headers="amount" class="amount">1 db</td>
     </tr>
     <tr>
-        <td>Mosogatószer</td>
-        <td class="amount">1 db</td>
+        <td headers="product">Mosogatószer</td>
+        <td headers="amount" class="amount">1 db</td>
     </tr>
     <tr>
-        <td>Kézfertőtlenítő</td>
-        <td class="amount">2 db</td>
+        <td headers="product">Kézfertőtlenítő</td>
+        <td headers="amount" class="amount">2 db</td>
     </tr>
 </table>
 
